Send HTTP request to subscriber